--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-community/hooks": "^3.0.0",
     "expo": "~49.0.15",
+    "expo-dev-menu": "^3.2.2",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
     "react": "^18.2.0",
